--- a/styles.css
+++ b/styles.css
@@ -28,14 +28,13 @@ body {
 .panels {
     height: 12.55vh;
     width: 8.3333vw;
-    animation: scalez 2s 1 normal linear;
+    animation: scalez 4s 1 normal linear;
     border: none;
-    background: url(birds.jpg) cover no-repeat;
 }
 
 @keyframes scalez {
     0% {
-        transform: scale(2);
+        transform: scale(3) rotate(360);
     }
     100% {
         transform: scale(1);
