--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,11 @@ body {
     height: 12.55vh;
     width: 8.3333vw;
     animation: scalez 4s 1 normal linear;
-    border: none;
 }
 
 @keyframes scalez {
     0% {
-        transform: scale(3) rotate(360);
+        transform: scale(2);
     }
     100% {
         transform: scale(1);
