--- a/styles.css
+++ b/styles.css
@@ -23,19 +23,20 @@ body {
 
     width: 100vw;
     height: 100vh;
+
+    transform-style: preserve-3d;
 }
 
 .panels {
-    height: 12.55vh;
-    width: 8.3333vw;
-    animation: scalez 4s 1 normal linear;
+    height: 8.4vh;
+    width: 6.25vw;
+    overflow: hidden;
+
+    /* animation: gyro 10s 1 normal linear; */
 }
 
-@keyframes scalez {
+@keyframes gyro {
     0% {
-        transform: scale(2);
-    }
-    100% {
-        transform: scale(1);
+        transform: rotate3d(1, 1, 1, 720deg);
     }
 }
