--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     width: 6.25vw;
     overflow: hidden;
 
-    /* animation: gyro 10s 1 normal linear; */
+    animation: gyro 10s 1 normal linear;
 }
 
 @keyframes gyro {
